Removed temporary variables from Complex.java Changed the signature of Fractal::calculate() to return an instance of this. Because I like it that way for now. Added some javadoc, slightly improved rendering times in FractalRenderer::renderChunk(,). Renamed a few methods. Dropped RxJava v3.0.12 and javafx-controls v15 from the pom as they weren't being used.